syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/communicationmethodfield";

import "audit.proto";

message CommunicationMethodField {
    string contact_system_code = 1;

    string communication_method_code = 2;

    string field_code = 3;

    string caption = 4;

    int64 sort_index = 5;

    v1.Audit audit = 6;
}

message DoReadRequest {
    string contact_system_code = 1;

    string communication_method_code = 2;

    string field_code = 3;
}

message DoReadResponse {
    CommunicationMethodField communication_method_field = 1;
}

message DoReadAllRequest {
    string contact_system_code = 1;

    string communication_method_code = 2;
}

message DoReadAllResponse {
    repeated CommunicationMethodField communication_method_field = 1;
}

message DoSaveRequest { 
    CommunicationMethodField communication_method_field = 1;
}

message DoSaveResponse {
    bool result = 1;
}

message DoDeleteRequest {
    string contact_system_code = 1;

    string communication_method_code = 2;

    string field_code = 3;
}

message DoDeleteResponse {
    bool result = 1;
}

service CommunicationMethodFieldService { 
    rpc DoRead (DoReadRequest) returns (DoReadResponse);

    rpc DoReadAll (DoReadAllRequest) returns (DoReadAllResponse);

    rpc DoSave (DoSaveRequest) returns (DoSaveResponse);

    rpc DoDelete (DoDeleteRequest) returns (DoDeleteResponse);
}